# Easysort

./: .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .txt  404.html  README.md  easysort_gui.ui  index.html  justfile  landscape-funding.txt  main_program.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  search.html  setup.py  sitemap.xml
.github/workflows/: docs.yml  lint-and-test.yml  lint.yml
Finance/: forecast.ipynb  machine_cost.xlsx
Picker/: README.md
Picker/code/: controlling_nema17_py3.py  multiple_motors_simu.ino  multiple_stepper_motors.ino  object_detection_test.py  single_stepper_motor.ino
_old/: background.md  example.py  example2.py
_old/ buf/: project_delta.md  user_input_motor_test.py
_old/data_engine/: requirements_de.txt
_old/docs/: sorting.md
_old/garbage_classification/: README.md
_old/lab/: arduino_motor_control.ino  send_to_arduino.py
afdl/container/: index.html
afdl/omlasteplads/: index.html
api/argo/: index.html
competitors/: index.html
contributing/: index.html
contributing/open-questions/: index.html
contributing/plan-for-victory/: index.html
contributing/projects/: index.html
conveyor_belt/: README.md
customers/: index.html
data_engine/: capture.py  convert_to_frames.py  data_engine.py  download_files.py  outdated.py  test.py  test_display.py  utils.py  view.py
docs/: CNAME  README.md  competitors.md  customers.md  index.md  landscape.md  landscape.txt  mission.md  open-questions.md  plan-for-victory.md  projects.md  run-easysort.md  what-is-easysort.md
docs/afdl/: container.md  omlasteplads.md
docs/api/: argo.md  core-concepts.md  sync-troubleshooting.md
docs/codebase/: structure.md
docs/contributing/: index.md  plan-for-victory.md
docs/getting-started/: quick-start.md
docs/presentations/: README.md
docs/products/: index.md  products.md  repositories.md  waste-guide.md
docs/vestforbraending/: container.md  genbrug.md
docs/vestforbrænding/: container.md  genbrug.md
docs/why/: competitors.md  current-state.md  funding.md  index.md  issues.md  landscape.md  mission.md  stakeholders.md
easysort/: __init__.py  classifier.py  clean_directories.py  cropper.py  dataloader.py  dataset.py  gpt_trainer.py  helpers.py  human_eval.py  pusher.py  registry.py  run.py  run2.py  runner.py  sampler.py  todo.md  trainer.py  viewer.py
easysort/cli/: camera_box_poc.py  classifier_data_collector_poc.py
easysort/common/: datasaver.py  detections.py  environment.py  image_registry.py  logger.py  timer.py
easysort/configs/: robot_overview.yaml
easysort/datasets/: readme.md
easysort/garbage/: human_eval.py  run.py  validate.py  view.py  yolo_trainer.py
easysort/helpers/: classifier.py  datasaver.py  orchestrator.py
easysort/runners/: argo-ten-check-2.py  argo-tent-check-2.py  argo-tent-check.py  argo_counter.py  argo_gpt_counter.py  check_useability.py  configs.py  talk_to_gpt.py  test.ipynb  verdis-belt.py  verdis_belt.py
easysort/services/: helpers.py  runner.py
easysort/sorting/: classifier.py  demo_gemini.html  infer_yoloWorld.py  infer_yolov8.py  infer_yolov8_ultralytics.py  observe.py  pipeline.py  segmentation.py  segmentation_fastsam.py  test_pyrealsense.py  train_yolov8.py  train_yolov8_ultralytics.py
easysort/suction_cup_runner/: suction_cup_runner.ino
easysort/test_procedure/: new_cam_bales.py  new_cam_bales_polygon.json  verdis_bales_motion.py  verdis_bales_motion_distance.py  verdis_bales_motion_distance2.py  verdis_bales_motion_polygon.json
easysort/tracking/: supabase_helper.py
easysort/trainers/: _test_motion_convertions.ipynb  verdis_belt.py  (+5 more)
garbage_classification/: README.md
gcodes/: RollerPlateMotorSide.gcode  UM2_RollerPlateMotorSide.gcode  UM2_RollerPlateMotorSideWindows.gcode  UM3E_DoubleFastenerOddSide.gcode  UM3E_RollerPlateMotorSide.gcode  UM3E_RollerPlateXAxis.gcode
lab/: check_arduinos.py  run.py  run_no_visuals.py  train.py
landscape/: index.html
mission/: index.html
open-questions/: index.html
plan-for-victory/: index.html
playground/: README.md  object_detection_test.py  train_simple_yolo.ipynb  try_gpt4vision.ipynb
products/: index.html
projects/: index.html
run-easysort/: index.html
search/: search_index.json
src/: run.py  run_no_visuals.py  train.py  user_input_suction_cup_test.py
stl_files/: Cornor.stl  Cornor1.stl  Cornor2.stl  CornorExtensionMotor v2.stl  CornorExtensionMotorMirrored.stl  CornorExtensionRoller v1.stl  CornorExtensionRollerMirrored.stl  CylinderExtensionWithPulleyDriver v2.stl  DoubleFastener v2.stl  DoubleFastenerOddSide.stl  DoubleFasteners.stl  EndWithMotor v4.stl  EndWithWheelExtension.stl  EndWithWheelXAxis.stl  MetalEndDrillHoles.stl  MotorHolderExtension.stl  MotorHolderXAxis.stl  RollerPlate v14.f3d  RollerPlateFastenerZAxis.stl  RollerPlateMotorSide.stl  RollerPlateNonMotorSide.stl  RollerPlateXAxis.stl  WheelCarrier v4.stl  WheelCarrier.stl  WheelCarrier8.8.stl  WheelCarrier87.stl  WheelCarrier89.stl  WheelCarrier91.stl  WheelCarrier92.stl  WheelCarrier93.stl  WheelCarrier94.stl  WheelCarrier96.stl  WheelCarrier97.stl  WheelCarrier98.stl  WheelCarrier99.stl
stylesheets/: extra.css
tests/: README.md  __init__.py  complete_test.py  helpers.py  test_argo_services.py  test_delta_connector.py  test_detection.py  test_detections.py  test_image_registry.py  test_image_sample.py  test_lossless_video.py  test_pubsub.py  test_registry.py  test_registry_connector.py  test_tiny.py
tmp/: 114221.mp4_633.gpt  114345.mp4_213.gpt  114345.mp4_349.gpt  120345.mp4_492.gpt  140116.mp4_841.gpt  142634.mp4_605.gpt  161257.mp4_204.gpt  200703.mp4_605.gpt  200703.mp4_622.gpt  210421.mp4_145.gpt
vision/: capture.py  garbage_real_time.py  train_simple_yolo.ipynb  try_gpt4vision.ipynb
what-is-easysort/: index.html
why/: index.html
(+180 files in other folders)
