[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easysort"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dacite>=1.8.1",
    "aiohttp>=3.13.2",
    "fastapi>=0.115.0",
    "flask>=3.1.2",
    "gdown>=5.2.0",
    "ollama>=0.6.1",
    "openai>=2.7.1",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "supabase>=2.24.0",
    "tensorboard>=2.20.0",
    "torchreid>=0.2.5",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.227",
    "uvicorn[standard]>=0.32.0",
    "raylib>=5.5.0.4",
    "rfdetr",
    "dill>=0.4.1",
    "transformers>=4.57.6",
]
[tool.uv]
package = true

[tool.setuptools]
packages = ["easysort", "easyprod"]

[tool.pytest.ini_options]
testpaths = ["tests", "easyprod/tests"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "types-tqdm>=4.67.3.20260303",
]

[tool.mypy]
explicit_package_bases = true
