[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easysort"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mypy>=1.20.2",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.12",
    "ultralytics>=8.4.46",
]
[tool.uv]
package = true

[tool.setuptools]
packages = ["easysort", "easyprod"]

[tool.mypy]
warn_unused_configs = true
files = ["tinygrad"]
ignore_missing_imports = true
check_untyped_defs = true
explicit_package_bases = true
warn_unreachable = true
warn_redundant_casts = true
strict_equality = true
# NOTE: had to comment this out to make mypy pass on both CI and OSX
#warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "extra.*"
follow_imports = "skip"



[tool.pytest.ini_options]
norecursedirs = [
  "extra",
  ".hypothesis",
  ".git",
]
timeout = 300
timeout_method = "thread"
timeout_func_only = true
testpaths = ["test"]
filterwarnings = [
  # Ignore SWIG warnings from importlib
  "ignore:builtin type SwigPy.*has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
  # Ignore torch.distributed deprecation warning
  "ignore:.*torch.distributed.reduce_op.*is deprecated:FutureWarning",
  # Ignore numpy warnings from transcendental tests (testing edge cases)
  "ignore:invalid value encountered in log2:RuntimeWarning",
  "ignore:overflow encountered in cast:RuntimeWarning",
  "ignore:divide by zero encountered in log2:RuntimeWarning",
  # Ignore multiprocessing fork warning (known pytest-xdist issue)
  "ignore:.*multi-threaded, use of fork.*may lead to deadlocks:DeprecationWarning",
  # Ignore torch tar extraction warning
  "ignore:.*Python 3.14 will.*filter extracted tar archives:DeprecationWarning",
  # Ignore audio library warnings (Python 3.13 removed aifc and sunau)
  "ignore:aifc was removed in Python 3.13.*:DeprecationWarning",
  "ignore:sunau was removed in Python 3.13.*:DeprecationWarning",
]

[tool.ruff]
preview = true
target-version = "py311"
line-length = 150
indent-width = 2
exclude = [
  ".git/",
  "docs/",
  "extra/",
  "test/external/mlperf_resnet",
  "test/external/mlperf_unet3d",
]

[tool.ruff.lint]
select = [
  "F",  # Pyflakes
  "W6",
  "E71",
  "E72",
  "E112",   # no-indented-block
  "E113",   # unexpected-indentation
  "E203",   # whitespace-before-punctuation
  "E272",   # multiple-spaces-before-keyword
  "E275",   # missing-whitespace-after-keyword
  "E303",   # too-many-blank-lines
  "E304",   # blank-line-after-decorator
  "E501",   # line-too-long
  # "E502",
  "E702",   # multiple-statements-on-one-line-semicolon
  "E703",   # useless-semicolon
  "E731",   # lambda-assignment
  "W191",   # tab-indentation
  "W291",   # trailing-whitespace
  "W293",   # blank-line-with-whitespace
  "UP039",  # unnecessary-class-parentheses
  "C416",   # unnecessary-comprehension
  "RET506", # superfluous-else-raise
  "RET507", # superfluous-else-continue
  "A",      # builtin-variable-shadowing, builtin-argument-shadowing, builtin-attribute-shadowing
  "FURB110",# if-exp-instead-of-or-operator
  "RUF018", # assignment-in-assert
]

# detect unused imports in examples
[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = [
  "W6",
  "E71",
  "E72",
  "E112",
  "E113",
  "E203",
  "E272",
  "E275",
  "E303",
  "E304",
  "E501",
  "E702",
  "E703",
  "E731",
  "W191",
  "W291",
  "W293",
  "UP039",
  "C416",
  "RET506",
  "RET507",
  "A",
  "FURB110",
  "RUF018",
  "F541",
  "F841",
]
"tinygrad/runtime/autogen/**/*.py" = ["E501", "F401", "E722", "E731", "F821", "A006", "A002", "F811"]
"tinygrad/runtime/autogen/amd/**/*.py" = ["E501"]
"test/amd/**/*.py" = ["F403", "F405"]

[tool.ruff.format]
exclude = ["*"]
